// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EvoconVDatePicker > renders correctly 1`] = `
<div
  class="v-sheet v-theme--light elevation-0 v-sheet--rounded v-picker v-date-picker v-date-picker--month v-locale--is-ltr evocon-v-date-picker"
  scrollable=""
>
  <!---->
  <div
    class="v-picker__body"
  >
    
    
    
    <div
      class="v-date-picker-controls v-date-picker-controls--variant-modal"
    >
      
      
      
      <button
        aria-label="Select month"
        class="v-btn v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-text v-date-picker-controls__month-btn"
        data-testid="month-btn"
        style="height: 36px;"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          
          January 2024
          
        </span>
        <!---->
        <!---->
      </button>
      <button
        aria-label="Select year"
        class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--size-default v-btn--variant-text v-date-picker-controls__mode-btn"
        data-testid="year-btn"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light v-icon--size-default"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
              />
            </svg>
          </i>
        </span>
        <!---->
        <!---->
      </button>
      
      <div
        class="v-spacer"
      />
      <div
        class="v-date-picker-controls__month"
      >
        <button
          aria-label="Previous month"
          class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--size-default v-btn--variant-text"
          data-testid="prev-month"
          type="button"
        >
          
          <span
            class="v-btn__overlay"
          />
          <span
            class="v-btn__underlay"
          />
          
          <!---->
          <span
            class="v-btn__content"
            data-no-activator=""
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate v-theme--light v-icon--size-default"
            >
              <svg
                aria-hidden="true"
                class="v-icon__svg"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
                />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </button>
        <button
          aria-label="Next month"
          class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--size-default v-btn--variant-text"
          data-testid="next-month"
          type="button"
        >
          
          <span
            class="v-btn__overlay"
          />
          <span
            class="v-btn__underlay"
          />
          
          <!---->
          <span
            class="v-btn__content"
            data-no-activator=""
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate v-theme--light v-icon--size-default"
            >
              <svg
                aria-hidden="true"
                class="v-icon__svg"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </button>
      </div>
      
      <!---->
      
    </div>
    
    <transition-stub
      appear="false"
      css="true"
      name="fade-transition"
      persisted="false"
    >
      <div
        class="v-date-picker-month"
        style="--v-date-picker-days-in-week: 7;"
      >
        <!---->
        <transition-stub
          appear="false"
          css="true"
          name="picker-transition"
          persisted="false"
        >
          <div
            class="v-date-picker-month__days"
          >
            
            <div
              class="v-date-picker-month__day v-date-picker-month__weekday"
            >
              M
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__weekday"
            >
              T
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__weekday"
            >
              W
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__weekday"
            >
              T
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__weekday"
            >
              F
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__weekday"
            >
              S
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__weekday"
            >
              S
            </div>
            
            
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-start"
              data-v-date="2024-01-01"
            >
              <button
                aria-current="date"
                aria-label="Today, Monday, January 1, 2024"
                class="v-btn v-btn--icon v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-outlined v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  1
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-02"
            >
              <button
                aria-label="Tuesday, January 2, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  2
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-03"
            >
              <button
                aria-label="Wednesday, January 3, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  3
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-04"
            >
              <button
                aria-label="Thursday, January 4, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  4
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-05"
            >
              <button
                aria-label="Friday, January 5, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  5
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-06"
            >
              <button
                aria-label="Saturday, January 6, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  6
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-end"
              data-v-date="2024-01-07"
            >
              <button
                aria-label="Sunday, January 7, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  7
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-start"
              data-v-date="2024-01-08"
            >
              <button
                aria-label="Monday, January 8, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  8
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-09"
            >
              <button
                aria-label="Tuesday, January 9, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  9
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-10"
            >
              <button
                aria-label="Wednesday, January 10, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  10
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-11"
            >
              <button
                aria-label="Thursday, January 11, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  11
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-12"
            >
              <button
                aria-label="Friday, January 12, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  12
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-13"
            >
              <button
                aria-label="Saturday, January 13, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  13
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-end"
              data-v-date="2024-01-14"
            >
              <button
                aria-label="Sunday, January 14, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  14
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-start"
              data-v-date="2024-01-15"
            >
              <button
                aria-label="Monday, January 15, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  15
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-16"
            >
              <button
                aria-label="Tuesday, January 16, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  16
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-17"
            >
              <button
                aria-label="Wednesday, January 17, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  17
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-18"
            >
              <button
                aria-label="Thursday, January 18, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  18
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-19"
            >
              <button
                aria-label="Friday, January 19, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  19
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-20"
            >
              <button
                aria-label="Saturday, January 20, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  20
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-end"
              data-v-date="2024-01-21"
            >
              <button
                aria-label="Sunday, January 21, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  21
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-start"
              data-v-date="2024-01-22"
            >
              <button
                aria-label="Monday, January 22, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  22
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-23"
            >
              <button
                aria-label="Tuesday, January 23, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  23
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-24"
            >
              <button
                aria-label="Wednesday, January 24, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  24
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-25"
            >
              <button
                aria-label="Thursday, January 25, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  25
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-26"
            >
              <button
                aria-label="Friday, January 26, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  26
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-27"
            >
              <button
                aria-label="Saturday, January 27, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  27
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-end"
              data-v-date="2024-01-28"
            >
              <button
                aria-label="Sunday, January 28, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  28
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-start"
              data-v-date="2024-01-29"
            >
              <button
                aria-label="Monday, January 29, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  29
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-30"
            >
              <button
                aria-label="Tuesday, January 30, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  30
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-31"
            >
              <button
                aria-label="Wednesday, January 31, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  31
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent"
              data-v-date="2024-02-01"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent"
              data-v-date="2024-02-02"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent"
              data-v-date="2024-02-03"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent v-date-picker-month__day--week-end"
              data-v-date="2024-02-04"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent v-date-picker-month__day--week-start"
              data-v-date="2024-02-05"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent"
              data-v-date="2024-02-06"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent"
              data-v-date="2024-02-07"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent"
              data-v-date="2024-02-08"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent"
              data-v-date="2024-02-09"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent"
              data-v-date="2024-02-10"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent v-date-picker-month__day--week-end"
              data-v-date="2024-02-11"
            >
              <!---->
            </div>
            
          </div>
        </transition-stub>
      </div>
    </transition-stub>
    
    
  </div>
  <!---->
</div>
`;

exports[`EvoconVDatePicker > renders correctly with albanian language 1`] = `
<div
  class="v-sheet v-theme--light elevation-0 v-sheet--rounded v-picker v-date-picker v-date-picker--month v-locale--is-ltr evocon-v-date-picker"
  scrollable=""
>
  <!---->
  <div
    class="v-picker__body"
  >
    
    
    
    <div
      class="v-date-picker-controls v-date-picker-controls--variant-modal"
    >
      
      
      
      <button
        aria-label="Select month"
        class="v-btn v-theme--light v-btn--density-comfortable v-btn--rounded v-btn--size-default v-btn--variant-text v-date-picker-controls__month-btn"
        data-testid="month-btn"
        style="height: 36px;"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          janar 2024
        </span>
        <!---->
        <!---->
      </button>
      <button
        aria-label="Select year"
        class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--size-default v-btn--variant-text v-date-picker-controls__mode-btn"
        data-testid="year-btn"
        type="button"
      >
        
        <span
          class="v-btn__overlay"
        />
        <span
          class="v-btn__underlay"
        />
        
        <!---->
        <span
          class="v-btn__content"
          data-no-activator=""
        >
          <i
            aria-hidden="true"
            class="v-icon notranslate v-theme--light v-icon--size-default"
          >
            <svg
              aria-hidden="true"
              class="v-icon__svg"
              role="img"
              viewBox="0 0 24 24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M7,10L12,15L17,10H7Z"
              />
            </svg>
          </i>
        </span>
        <!---->
        <!---->
      </button>
      
      <div
        class="v-spacer"
      />
      <div
        class="v-date-picker-controls__month"
      >
        <button
          aria-label="Previous month"
          class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--size-default v-btn--variant-text"
          data-testid="prev-month"
          type="button"
        >
          
          <span
            class="v-btn__overlay"
          />
          <span
            class="v-btn__underlay"
          />
          
          <!---->
          <span
            class="v-btn__content"
            data-no-activator=""
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate v-theme--light v-icon--size-default"
            >
              <svg
                aria-hidden="true"
                class="v-icon__svg"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M15.41,16.58L10.83,12L15.41,7.41L14,6L8,12L14,18L15.41,16.58Z"
                />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </button>
        <button
          aria-label="Next month"
          class="v-btn v-btn--icon v-theme--light v-btn--density-comfortable v-btn--size-default v-btn--variant-text"
          data-testid="next-month"
          type="button"
        >
          
          <span
            class="v-btn__overlay"
          />
          <span
            class="v-btn__underlay"
          />
          
          <!---->
          <span
            class="v-btn__content"
            data-no-activator=""
          >
            <i
              aria-hidden="true"
              class="v-icon notranslate v-theme--light v-icon--size-default"
            >
              <svg
                aria-hidden="true"
                class="v-icon__svg"
                role="img"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z"
                />
              </svg>
            </i>
          </span>
          <!---->
          <!---->
        </button>
      </div>
      
      <!---->
      
    </div>
    
    <transition-stub
      appear="false"
      css="true"
      name="fade-transition"
      persisted="false"
    >
      <div
        class="v-date-picker-month"
        style="--v-date-picker-days-in-week: 7;"
      >
        <!---->
        <transition-stub
          appear="false"
          css="true"
          name="picker-transition"
          persisted="false"
        >
          <div
            class="v-date-picker-month__days"
          >
            
            <div
              class="v-date-picker-month__day v-date-picker-month__weekday"
            >
              Hë
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__weekday"
            >
              Ma
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__weekday"
            >
              Më
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__weekday"
            >
              En
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__weekday"
            >
              Pr
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__weekday"
            >
              Sh
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__weekday"
            >
              Di
            </div>
            
            
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-start"
              data-v-date="2024-01-01"
            >
              <button
                aria-current="date"
                aria-label="Today, Monday, January 1, 2024"
                class="v-btn v-btn--icon v-theme--light text-primary v-btn--density-default v-btn--size-default v-btn--variant-outlined v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  1
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-02"
            >
              <button
                aria-label="Tuesday, January 2, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  2
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-03"
            >
              <button
                aria-label="Wednesday, January 3, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  3
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-04"
            >
              <button
                aria-label="Thursday, January 4, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  4
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-05"
            >
              <button
                aria-label="Friday, January 5, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  5
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-06"
            >
              <button
                aria-label="Saturday, January 6, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  6
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-end"
              data-v-date="2024-01-07"
            >
              <button
                aria-label="Sunday, January 7, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  7
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-start"
              data-v-date="2024-01-08"
            >
              <button
                aria-label="Monday, January 8, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  8
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-09"
            >
              <button
                aria-label="Tuesday, January 9, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  9
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-10"
            >
              <button
                aria-label="Wednesday, January 10, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  10
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-11"
            >
              <button
                aria-label="Thursday, January 11, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  11
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-12"
            >
              <button
                aria-label="Friday, January 12, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  12
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-13"
            >
              <button
                aria-label="Saturday, January 13, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  13
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-end"
              data-v-date="2024-01-14"
            >
              <button
                aria-label="Sunday, January 14, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  14
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-start"
              data-v-date="2024-01-15"
            >
              <button
                aria-label="Monday, January 15, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  15
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-16"
            >
              <button
                aria-label="Tuesday, January 16, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  16
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-17"
            >
              <button
                aria-label="Wednesday, January 17, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  17
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-18"
            >
              <button
                aria-label="Thursday, January 18, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  18
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-19"
            >
              <button
                aria-label="Friday, January 19, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  19
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-20"
            >
              <button
                aria-label="Saturday, January 20, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  20
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-end"
              data-v-date="2024-01-21"
            >
              <button
                aria-label="Sunday, January 21, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  21
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-start"
              data-v-date="2024-01-22"
            >
              <button
                aria-label="Monday, January 22, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  22
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-23"
            >
              <button
                aria-label="Tuesday, January 23, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  23
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-24"
            >
              <button
                aria-label="Wednesday, January 24, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  24
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-25"
            >
              <button
                aria-label="Thursday, January 25, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  25
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-26"
            >
              <button
                aria-label="Friday, January 26, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  26
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-27"
            >
              <button
                aria-label="Saturday, January 27, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  27
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-end"
              data-v-date="2024-01-28"
            >
              <button
                aria-label="Sunday, January 28, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  28
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--week-start"
              data-v-date="2024-01-29"
            >
              <button
                aria-label="Monday, January 29, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  29
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-30"
            >
              <button
                aria-label="Tuesday, January 30, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  30
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day"
              data-v-date="2024-01-31"
            >
              <button
                aria-label="Wednesday, January 31, 2024"
                class="v-btn v-btn--icon v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-date-picker-month__day-btn"
                type="button"
              >
                
                <span
                  class="v-btn__overlay"
                />
                <span
                  class="v-btn__underlay"
                />
                
                <!---->
                <span
                  class="v-btn__content"
                  data-no-activator=""
                >
                  
                  
                  31
                  <!---->
                  
                  
                </span>
                <!---->
                <!---->
              </button>
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent"
              data-v-date="2024-02-01"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent"
              data-v-date="2024-02-02"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent"
              data-v-date="2024-02-03"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent v-date-picker-month__day--week-end"
              data-v-date="2024-02-04"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent v-date-picker-month__day--week-start"
              data-v-date="2024-02-05"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent"
              data-v-date="2024-02-06"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent"
              data-v-date="2024-02-07"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent"
              data-v-date="2024-02-08"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent"
              data-v-date="2024-02-09"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent"
              data-v-date="2024-02-10"
            >
              <!---->
            </div>
            <div
              class="v-date-picker-month__day v-date-picker-month__day--adjacent v-date-picker-month__day--hide-adjacent v-date-picker-month__day--week-end"
              data-v-date="2024-02-11"
            >
              <!---->
            </div>
            
          </div>
        </transition-stub>
      </div>
    </transition-stub>
    
    
  </div>
  <!---->
</div>
`;
